rnsc/test_data/rns_integration/error/parser/outer_class_sub_directive/multiple_definitions.rns
; Tests that multiple .outer_class directives are detected and reported.
; Expected error: E-043 (multiple outer class refs)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class com/profs/Main
    .outer_class com/profs/Other
.inner_classes_attr_end

.class_end
